--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,7 +1,11 @@
 {
   "name": "reason-scripts",
   "sources": ["src"],
-  "bs-dependencies": ["reason-react"],
+  "bs-dependencies": [
+    "reason-react",
+    "bs-fetch",
+    "@glennsl/bs-json"
+  ],
   "reason": {
     "react-jsx": 2
   },
